<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="30dp">
    <TextView
        android:id="@+id/title_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:text="@string/title_advice_dialog" />
    <TextView
        android:id="@+id/pay_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:text=""/>

    <LinearLayout
        android:id="@+id/linearLayout_buttons_departure_vehicle"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="14dp"
            android:text="@string/text_button_cancel" />
        <Button
            android:id="@+id/accept_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="14dp"
            android:text="@string/text_button_accept" />
    </LinearLayout>
</LinearLayout>